# Thrifting_Kelompok_2_BE

./: .env  .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0001_init.sql
src/: auth.rs  error.rs  main.rs  models.rs  schema.rs  server.rs  state.rs
src/routes/: auth.rs  faq.rs  mod.rs  notifications.rs  products.rs  settings.rs  stores.rs  support.rs  wishlist.rs
