[package]
name = "thrifting-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-cors = "0.7"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
dotenvy = "0.15"
config = "0.14"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# auth
jsonwebtoken = "9"
argon2 = "0.5"
nanoid = "0.4"
rand = "0.8"
# db
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_path_to_error = "0.1"

[profile.release]
lto = true
codegen-units = 1
